force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/Session_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Session Configuration</label>
    <pluralLabel>Session Configurations</pluralLabel>
</CustomObject>