force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Activity_Update_Interval_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Activity_Update_Interval_Minutes__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Interval in minutes for updating user activity timestamps. This determines how frequently the system updates the last activity time for active sessions.</description>
    <label>Activity Update Interval Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>