force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Admin_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Admin_Email_Notifications__c</fullName>
    <description
  >Email address where administrative notifications about session monitoring, security events, and auto-deactivations are sent. Multiple emails can be separated by commas.</description>
    <label>Admin Email Notifications</label>
    <type>Email</type>
</CustomField>