force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Batch_Job_Frequency_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Frequency_Minutes__c</fullName>
    <description
  >Frequency in minutes for the batch job that monitors and processes session activities. This determines how often the system checks for inactive sessions and performs cleanup operations.</description>
    <label>Batch Job Frequency Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>5</defaultValue>
</CustomField>