force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Enable_Activity_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Activity_Tracking__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Controls whether detailed user activity tracking is enabled. When active, the system tracks page views, actions, and other user interactions for security and audit purposes.</description>
    <label>Enable Activity Tracking</label>
    <type>Checkbox</type>
</CustomField>