force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Enable_Auto_Deactivation__c.field-meta.xml
<CustomField>
    <fullName>Enable_Auto_Deactivation__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Enables automatic deactivation of user accounts when suspicious activity is detected or when security thresholds are exceeded. This provides an additional layer of security.</description>
    <label>Enable Auto Deactivation</label>
    <type>Checkbox</type>
</CustomField>