force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Enable_Browser_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Enable_Browser_Tracking__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Enables tracking of browser information including user agent, browser type, and device details for security analysis and session management purposes.</description>
    <label>Enable Browser Tracking</label>
    <type>Checkbox</type>
</CustomField>