force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Enable_Session_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Enable_Session_Monitoring__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Controls whether session monitoring is enabled system-wide. When enabled, user sessions are tracked for activity, concurrent access, and security compliance.</description>
    <label>Enable Session Monitoring</label>
    <type>Checkbox</type>
</CustomField>