force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Max_Concurrent_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Max_Concurrent_Sessions__c</fullName>
    <defaultValue>3</defaultValue>
    <description
  >Maximum number of concurrent active sessions allowed per user. This helps prevent session hijacking and ensures users are not logged in from multiple locations simultaneously.</description>
    <label>Max Concurrent Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>