force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Session_Timeout_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Timeout_Minutes__c</fullName>
    <defaultValue>15</defaultValue>
    <description
  >Number of minutes before a user session times out due to inactivity. This value determines when inactive sessions are automatically terminated to maintain security.</description>
    <label>Session Timeout Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>