force-app/main/UtilityComponents/sessionManagement/objects/Session_Configuration__mdt/fields/Session_Warning_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Warning_Minutes__c</fullName>
    <defaultValue>2</defaultValue>
    <description>Number of minutes before session timeout when a warning message is displayed to the user. This gives users a chance to extend their session before automatic logout.</description>
    <label>Session Warning Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>